--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </main>
 
-        <!-- <section>
+        <section>
 
             <section class="productSection">
                 <h2>Ipsum 1</h2>
@@ -42,6 +42,6 @@
                 <p>Lorem Ipsum sit amet</p>
             </section>
 
-        </section> -->
+        </section>
     </body>
 </html>
