Added pricing area

--- a/index.html
+++ b/index.html
@@ -36,23 +36,55 @@
             </div>
         </main>
 
-        <section>
-            <h2>Pricing</h2>
-            <section class="productSection">
-                <h2>Ipsum 1</h2>
-                <p>Lorem Ipsum sit amet</p>
+        <section class="pricingSection">
+        <header>
+            <h2 class="priceHeading">Pricing</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget ipsum id augue accumsan facilisis quis.</p>
+        </header>
+            <div>
+            <section class="productSection" id="free">
+                <h2>Free</h2>
+                <ul>
+                    <li class="odd">Ipsum</li>
+                    <li class="even">Consectetur</li>
+                    <li class="odd">Sit Amet</li>
+                    <li class="even">Lorem</li>
+                    <li class="odd">adipiscing</li>
+                </ul>
             </section>
 
-            <section class="productSection">
-                <h2>Ipsum 1</h2>
-                <p>Lorem Ipsum sit amet</p>
+            <section class="productSection" id="premium">
+                <h2>Premium</h2>
+                <ul>
+                    <li class="odd">Ipsum</li>
+                    <li class="even">Consectetur</li>
+                    <li class="odd">Sit Amet</li>
+                    <li class="even">Lorem</li>
+                    <li class="odd">adipiscing</li>
+                </ul>
             </section>
 
-            <section class="productSection">
-                <h2>Ipsum 1</h2>
-                <p>Lorem Ipsum sit amet</p>
+            <section class="productSection" id="enterprise">
+                <h2>Enterprise</h2>
+                <ul>
+                    <li class="odd">Ipsum</li>
+                    <li class="even">Consectetur</li>
+                    <li class="odd">Sit Amet</li>
+                    <li class="even">Lorem</li>
+                    <li class="odd">adipiscing</li>
+                </ul>
             </section>
-
+        </div>
         </section>
+
+        <section class="testimonySection">
+            <header class="testimonyHeader">
+                <h2>Testimonials</h2>
+            </header>
+        </section>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
