Added testimonials HTML

--- a/index.html
+++ b/index.html
@@ -81,6 +81,37 @@
             <header class="testimonyHeader">
                 <h2>Testimonials</h2>
             </header>
+
+            <div class="testimonySlider">
+                <section class="testimony">
+                    <h3>It was great!</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                     Aenean eget ipsum id augue accumsan facilisis quis.</p>
+                    <p>from David</p>
+                </section>
+
+                <section class="testimony">
+                    <h3>Really cool stuff!</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenean eget ipsum id augue accumsan facilisis quis.</p>
+                    <p>from John</p>
+                </section>
+
+                <section class="testimony">
+                    <h3>Definitely underrated.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenean eget ipsum id augue accumsan facilisis quis.</p>
+                    <p>from Jacob</p>
+                </section>
+
+                <section class="testimony">
+                    <h3>It has secret sauce.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenean eget ipsum id augue accumsan facilisis quis.</p>
+                    <p>from Creepy Joe</p>
+                </section>
+            </div>
+
         </section>
 
         <footer>
